--- a/test/fixtures/images.yml
+++ b/test/fixtures/images.yml
@@ -1,3 +1,14 @@
+# == Schema Information
+#
+# Table name: images
+#
+#  id         :uuid             not null, primary key
+#  file       :string(255)
+#  space_id   :uuid
+#  created_at :datetime
+#  updated_at :datetime
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
